[package]
name = "telesteller"
version = "0.1.0"
authors = ["Ray Eldath <ray.eldath@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "telesteller"
path = "./src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.6"
tracing = "0.1"
structopt = "0.3"
regex = "1"
thiserror = "1.0"
bytes = "1"
derive_more = "0.99"

[dev-dependencies]
# Enable test-utilities in dev mode only. This is mostly for tests.
tokio = { version = "1", features = ["test-util"] }
hex-literal = "0.3"