[package]
name = "telesteller"
version = "0.1.0"
authors = ["Ray Eldath <ray.eldath@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "telesteller"
path = "./src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
async-stream = "0.3.0"
futures = "0.3"
structopt = "0.3"
thiserror = "1.0"
bytes = "1"
derive_more = "0.99"

[dev-dependencies]
# Enable test-utilities in dev mode only. This is mostly for tests.
tokio = { version = "1", features = ["test-util"] }
hex-literal = "0.3"